trying to fix spacing on concept rows

--- a/src/app/(pages)/codeLibrary/codeLibrary.module.scss
+++ b/src/app/(pages)/codeLibrary/codeLibrary.module.scss
@@ -325,10 +325,19 @@
   margin-bottom: 0.5rem;
 }
 
+$conditionColumnSpacing: 1.25rem 2fr 5fr;
+$columnGap: 1rem;
+
 .conceptsTable__tableBody {
   &_row {
     flex-direction: row !important;
     border: none !important; // apply this explicitly on left table
+  text-align: left;
+  display: grid;
+  grid-template-columns: $conditionColumnSpacing;
+  column-gap: $columnGap;
+  margin-top: 1.5rem;
+  align-items: center;
 
     td {
       background: transparent !important;
